# cloudshell-scriptfoundry

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.MD  LICENSE  README.MD  changelog_config.json  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
.github/workflows/: lint-test.yml  release.yml
src/scriptfoundry/: cli.py  constants.py
src/scriptfoundry/commands/: new_command.py  pack_command.py  update_command.py
src/scriptfoundry/utilities/: api_generator.py  check_connectivity.py  config_handler.py  custom_config_reader.py  template_handler.py  zip_archive_handler.py
tests/: test_api_generator.py  test_config_reader.py  test_connectivity_checker.py  test_template_create.py  test_update.py  test_zip_create.py
tests/test-assets/template-test-scripts/setup/: cookiecutter.json
tests/test-assets/template-test-scripts/setup/{{cookiecutter.script_name}}/: __main__.py
