[metadata]
name = cloudshell-scriptfoundry
version = file: version.txt
author = QualiLab
author_email = support@qualisystems.com
description = A CLI way to generate and upload cloudshell orchestration scripts
long_description = file: README.MD
long_description_content_type = text/markdown
url = https://github.com/QualiSystemsLab/cloudshell-scriptfoundry
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license = MIT
license_file = LICENSE


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    shellfoundry
    cloudshell-automation-api

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    scriptfoundry = scriptfoundry.cli:cli